<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/incTitleBar"
        layout="@layout/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9c9c9c"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incTitleBar">

        <Button
            android:id="@+id/btFarmToolsConfig"
            android:layout_width="@dimen/dp_101"
            android:layout_height="@dimen/dp_131"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:text="@string/farm_tools_config" />
        <Button
            android:id="@+id/btFarmMachineryConfig"
            android:layout_width="@dimen/dp_101"
            android:layout_height="@dimen/dp_131"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:text="@string/farm_machinery_config" />

        <Button
            android:layout_width="@dimen/dp_101"
            android:layout_height="@dimen/dp_131"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:text="@string/antenna_config" />

        <Button
            android:layout_width="@dimen/dp_101"
            android:layout_height="@dimen/dp_131"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:text="@string/diff_data_source_config" />

        <Button
            android:layout_width="@dimen/dp_101"
            android:layout_height="@dimen/dp_131"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:text="@string/nav_mode_config" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>