<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_472"
    android:layout_height="@dimen/dp_215"
    android:background="#9c9c9c"
    tools:context=".ui.fragment.farmTools.FarmToolsConfigFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/task_name"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@+id/etTaskName"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/etTaskName" />

    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="@dimen/dp_169"
        android:layout_height="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@color/white"
        android:padding="@dimen/dp_0"
        android:textSize="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/task_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/task_area"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@+id/spArea"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/spArea" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spArea"
        android:layout_width="@dimen/dp_169"
        android:layout_height="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@color/white"
        android:padding="@dimen/dp_0"
        android:textSize="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/etTaskName" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/task_creator"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@+id/etTaskName"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/etTaskName" />

    <EditText
        android:id="@+id/etCreator"
        android:layout_width="@dimen/dp_169"
        android:layout_height="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@color/white"
        android:padding="@dimen/dp_0"
        android:textSize="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/task_farm_tools"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@+id/spFarmTools"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/spFarmTools" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spFarmTools"
        android:layout_width="@dimen/dp_169"
        android:layout_height="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@color/white"
        android:padding="@dimen/dp_0"
        android:textSize="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/etCreator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/task_date"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@+id/tvData"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/tvData" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="@dimen/dp_169"
        android:layout_height="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_0"
        android:textSize="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/spArea" />
</androidx.constraintlayout.widget.ConstraintLayout>