<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9c9c9c"
    tools:context=".ui.fragment.farmTools.FarmToolsConfigFragment">

    <include
        android:id="@+id/incTitleBar"
        layout="@layout/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incTitleBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/farm_tools_config_cl"
                android:background="@mipmap/shadow_bg_white">

                <TextView
                    android:id="@+id/tvTitleWide"
                    style="@style/farm_tools_config_title"
                    android:text="@string/wheelbase"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivWide"
                    style="@style/farm_tools_config_img"
                    android:background="@drawable/selector_button_main"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleWide" />

                <EditText
                    android:id="@+id/et_wheelbase"
                    style="@style/farm_tools_config_et"
                    android:text="3.3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivWide" />

                <TextView
                    style="@style/farm_tools_config_unit"
                    android:text="米"
                    app:layout_constraintBottom_toBottomOf="@+id/et_wheelbase"
                    app:layout_constraintStart_toEndOf="@id/et_wheelbase"
                    app:layout_constraintTop_toTopOf="@+id/et_wheelbase" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout style="@style/farm_tools_config_cl">

                <TextView
                    android:id="@+id/tvTitleOffset"
                    style="@style/farm_tools_config_title"
                    android:text="@string/antenna_to_front"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivOffset"
                    style="@style/farm_tools_config_img"
                    android:background="@drawable/selector_button_main"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleOffset" />

                <EditText
                    android:id="@+id/et_antenna_to_front"
                    style="@style/farm_tools_config_et"
                    android:text="3.3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivOffset" />

                <TextView
                    style="@style/farm_tools_config_unit"
                    android:text="米"
                    app:layout_constraintBottom_toBottomOf="@+id/et_antenna_to_front"
                    app:layout_constraintStart_toEndOf="@id/et_antenna_to_front"
                    app:layout_constraintTop_toTopOf="@+id/et_antenna_to_front" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout style="@style/farm_tools_config_cl">

                <TextView
                    android:id="@+id/tvTitleBackCenter"
                    style="@style/farm_tools_config_title"
                    android:text="@string/antenna_height"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivBackCenter"
                    style="@style/farm_tools_config_img"
                    android:background="@drawable/selector_button_main"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleBackCenter" />

                <EditText
                    android:id="@+id/et_antenna_height"
                    style="@style/farm_tools_config_et"
                    android:text="3.3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivBackCenter" />

                <TextView
                    style="@style/farm_tools_config_unit"
                    android:text="米"
                    app:layout_constraintBottom_toBottomOf="@+id/et_antenna_height"
                    app:layout_constraintStart_toEndOf="@id/et_antenna_height"
                    app:layout_constraintTop_toTopOf="@+id/et_antenna_height" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/farm_tools_config_cl">

                <TextView
                    android:id="@+id/tvTitleOverlapping"
                    style="@style/farm_tools_config_title"
                    android:text="@string/farm_tools_overlapping"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivOverlapping"
                    style="@style/farm_tools_config_img"
                    android:background="@drawable/selector_button_main"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleOverlapping" />

                <EditText
                    android:id="@+id/etOverlapping"
                    style="@style/farm_tools_config_et"
                    android:text="3.3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivOverlapping" />

                <TextView
                    style="@style/farm_tools_config_unit"
                    android:text="米"
                    app:layout_constraintBottom_toBottomOf="@+id/etOverlapping"
                    app:layout_constraintStart_toEndOf="@id/etOverlapping"
                    app:layout_constraintTop_toTopOf="@+id/etOverlapping" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>